refactor code, update methods

--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,21 @@
             "email": "fomvasss@gmail.com"
         }
     ],
+    "version": "3.3.3",
     "homepage": "https://github.com/fomvasss/laravel-epochta-sms",
     "require": {
-        "php": ">=5.5.9",
-        "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*"
+        "php": ">=7.0.0",
+        "illuminate/support": "5.2.*|5.3.*|5.4.*|5.5.*",
+        "nesbot/carbon": "~1.20"
     },
     "autoload": {
         "classmap": [
-            "libs"
+            "libs",
+            "database/migrations"
         ],
         "psr-4": {
             "Fomvasss\\EpochtaService\\": "src/"
-        },
-        "files": [
-            "src/helpers.php"
-        ]
+        }
     },
     "extra": {
         "laravel": {
