--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/fomvasss/laravel-epochta-sms",
     "require": {
         "php": ">=7.0.0",
-        "illuminate/support": "5.4.*|5.5.*",
+        "illuminate/support": "5.6.*",
         "nesbot/carbon": "~1.20"
     },
     "autoload": {
